app/assets/stylesheets/locals/collections-exhibits.css.scss
.blacklight-collections-index,.blacklight-exhibits-index {
    #main-container {
        img {
            width: 100%;
            margin-bottom: 0;
        }
        .info {
           background-color: $yellow;
           color: $dark-blue;
           padding: $grid-gutter-width*0.5 $grid-gutter-width*0.75;
           // Left-right padding chosen such that AAPB fits in two lines.
           margin-top: 0;
           margin-bottom: $grid-gutter-width;
           h2 {
               margin: 0;
           }
        }
    }
}

.blacklight-exhibits-index {
    #main-container {
        .info {
            h2 { font-size: 18px; } // Smaller font
            height: 120px; // Needs more space
        }
    }
}

.blacklight-collections-index {
    #main-container {
        .info {
            h2 {
              font-size: 20px; // Bigger font
              text-transform: uppercase; // Scholar exhibits have longer titles: less readable in all caps.
            }
            height: 75px; // Don't need as much space.
        }
    }
}

.blacklight-collections-show,.blacklight-exhibits-show {
    div.pull-left img {
        // This is very ad hoc.
        margin-left: -$grid-gutter-width/2;
        margin-right: $grid-gutter-width/2;
        margin-bottom: $grid-gutter-width;
        width: 100%;
    }
    #main-container {
        img {
            width: 100%;
            margin-bottom: 0;
        }
        .info {
           background-color: $medium-blue;
           color: #FFF;
           padding: $grid-gutter-width*0.5 $grid-gutter-width*0.75;
           // Left-right padding chosen such that AAPB fits in two lines.
           margin-top: 0;
           margin-bottom: $grid-gutter-width;
           h2 {
               margin: 0;
           }
        }
    }
}

